chore: remove concurrency config from backup hoarder

--- a/k8s/blueprints/n8n/configs.env
+++ b/k8s/blueprints/n8n/configs.env
@@ -8,10 +8,13 @@ N8N_GRACEFUL_SHUTDOWN_TIMEOUT=30
 N8N_HIRING_BANNER_ENABLED=true
 N8N_HOST=n8n.meysam.io
 N8N_METRICS=true
+N8N_PATH=/
 N8N_PORT=5678
 N8N_PROTOCOL=http
 N8N_PUBLIC_API_DISABLED=true
 N8N_PUBLIC_API_SWAGGERUI_DISABLED=true
+N8N_RUNNERS_ENABLED=true
 N8N_SMTP_PORT=587
 N8N_SMTP_SENDER=Meysam N8N <n8n@mail.meysam.io>
 N8N_TEMPLATES_ENABLED=true
+N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
