fix: modify the reference gitops path

--- a/k8s/blueprints/n8n/configs.env
+++ b/k8s/blueprints/n8n/configs.env
@@ -3,7 +3,9 @@ CREDENTIALS_OVERWRITE_ENDPOINT=send-credentials
 DB_SQLITE_POOL_SIZE=4
 DB_SQLITE_VACUUM_ON_STARTUP=false
 DB_TYPE=sqlite
-GENERIC_TIMEZONE=UTC
+GENERIC_TIMEZONE=Etc/UTC
+N8N_DIAGNOSTICS_ENABLED=false
+N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
 N8N_GRACEFUL_SHUTDOWN_TIMEOUT=30
 N8N_HIRING_BANNER_ENABLED=true
 N8N_HOST=n8n.meysam.io
@@ -17,4 +19,6 @@ N8N_RUNNERS_ENABLED=true
 N8N_SMTP_PORT=587
 N8N_SMTP_SENDER=Meysam N8N <n8n@mail.meysam.io>
 N8N_TEMPLATES_ENABLED=true
-N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
+WEBHOOK_URL=https://n8n.meysam.io
+#N8N_PUSH_BACKEND=sse
+N8N_PROXY_HOPS=1
