--- a/k8s/prod-eu/gitops/gateway.yml
+++ b/k8s/prod-eu/gitops/gateway.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   force: false
   interval: 5m
-  path: ./kubernetes/newsletter-server/gateway
+  path: ./k8s/prod-eu/gateway
   prune: true
   sourceRef:
     kind: GitRepository
