--- a/k8s/prod-eu/gitops/misc.yml
+++ b/k8s/prod-eu/gitops/misc.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   force: false
   interval: 5m
-  path: ./kubernetes/newsletter-server/misc
+  path: ./k8s/prod-eu/misc
   prune: true
   sourceRef:
     kind: GitRepository
