--- a/k8s/prod-eu/gitops/monitoring.yml
+++ b/k8s/prod-eu/gitops/monitoring.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   force: false
   interval: 5m
-  path: ./kubernetes/newsletter-server/monitoring
+  path: ./k8s/prod-eu/monitoring
   prune: true
   sourceRef:
     kind: GitRepository
