fix: modify path to replacement

--- a/k8s/blueprints/robots-txt/kustomization.yml
+++ b/k8s/blueprints/robots-txt/kustomization.yml
@@ -42,7 +42,7 @@ replacements:
       - select:
           kind: VMServiceScrape
         fieldPaths:
-          - spec.endpointSelector.matchLabels
+          - spec.selector.matchLabels
         options:
           create: true
 
