--- a/k8s/prod-eu/monitoring/kustomization.yml
+++ b/k8s/prod-eu/monitoring/kustomization.yml
@@ -24,10 +24,11 @@ resources:
   - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/refs/tags/v0.79.2/example/prometheus-operator-crd-full/monitoring.coreos.com_servicemonitors.yaml
   - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/refs/tags/v0.79.2/example/prometheus-operator-crd-full/monitoring.coreos.com_thanosrulers.yaml
 
+  - datasource-tempo.yml
   - kube-prometheus-dashboards.yml
+  - tarzan.yml
   - vlogs-victorialogs.yml
   - vmalertmanagerconfig.yml
   - vmservicescrape-haproxy.yml
-  - datasource-tempo.yml
 
 namespace: monitoring
