--- a/k8s/blueprints/hcloud-csi-driver/helm-values.yml
+++ b/k8s/blueprints/hcloud-csi-driver/helm-values.yml
@@ -587,11 +587,10 @@ node:
   ## ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
   ##
   tolerations:
-    []
     # - effect: NoExecute
     #   operator: Exists
-    # - effect: NoSchedule
-    #   operator: Exists
+    - effect: NoSchedule
+      operator: Exists
     # - key: CriticalAddonsOnly
     #   operator: Exists
 
