fix: modify typo

--- a/k8s/prod-eu/gitops/external-secrets.yml
+++ b/k8s/prod-eu/gitops/external-secrets.yml
@@ -2,12 +2,12 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: external-secret
+  name: external-secrets
   namespace: flux-system
 spec:
   force: false
   interval: 5m
-  path: ./k8s/blueprints/external-secret
+  path: ./k8s/blueprints/external-secrets
   prune: true
   sourceRef:
     kind: GitRepository
