--- a/k8s/blueprints/cilium/helm-values.yml
+++ b/k8s/blueprints/cilium/helm-values.yml
@@ -1442,7 +1442,7 @@ hubble:
       extraIpAddresses: []
   relay:
     # -- Enable Hubble Relay (requires hubble.enabled=true)
-    enabled: false
+    enabled: true
     # -- Roll out Hubble Relay pods automatically when configmap is updated.
     rollOutPods: false
     # -- Hubble-relay container image.
