--- a/k8s/blueprints/trivy-operator/helm-values.yml
+++ b/k8s/blueprints/trivy-operator/helm-values.yml
@@ -722,7 +722,10 @@ nodeCollector:
   # -- excludeNodes comma-separated node labels that the node-collector job should exclude from scanning (example kubernetes.io/arch=arm64,team=dev)
   excludeNodes:
   # -- tolerations to be applied to the node-collector so that they can run on nodes with matching taints
-  tolerations: []
+  tolerations:
+    - effect: NoSchedule
+      key: node
+
   # -- If you do want to specify tolerations, uncomment the following lines, adjust them as necessary, and remove the
   # square brackets after 'scanJobTolerations:'.
   # - key: "key1"
