--- a/k8s/blueprints/victoria-metrics-k8s-stack/helm-values.yml
+++ b/k8s/blueprints/victoria-metrics-k8s-stack/helm-values.yml
@@ -59,6 +59,7 @@ victoria-metrics-operator:
   tolerations:
     - effect: NoSchedule
       key: node
+      value: findforce
   operator:
     # -- By default, operator converts prometheus-operator objects.
     disable_prometheus_converter: false
