--- a/k8s/blueprints/victoria-metrics-k8s-stack/helm-values.yml
+++ b/k8s/blueprints/victoria-metrics-k8s-stack/helm-values.yml
@@ -49,13 +49,13 @@ victoria-metrics-operator:
   serviceMonitor:
     enabled: true
   replicaCount: 2
-  affinity:
-    podAntiAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-        - labelSelector:
-            matchLabels:
-              app.kubernetes.io/name: victoria-metrics-operator
-          topologyKey: kubernetes.io/hostname
+  topologySpreadConstraints:
+    - maxSkew: 1
+      topologyKey: kubernetes.io/hostname
+      whenUnsatisfiable: DoNotSchedule
+      labelSelector:
+        matchLabels:
+          app.kubernetes.io/name: victoria-metrics-operator
   tolerations:
     - effect: NoSchedule
       key: node
