feat: add tolerations to alloy

--- a/k8s/blueprints/alloy/helm-values.yml
+++ b/k8s/blueprints/alloy/helm-values.yml
@@ -215,7 +215,10 @@ controller:
   nodeSelector: {}
 
   # -- Tolerations to apply to Grafana Alloy pods.
-  tolerations: []
+  tolerations:
+    - effect: NoSchedule
+      key: node
+      value: findforce
 
   # -- Topology Spread Constraints to apply to Grafana Alloy pods.
   topologySpreadConstraints: []
