fix: add toleration to ESO webhook

--- a/k8s/blueprints/external-secrets/helm-values.yml
+++ b/k8s/blueprints/external-secrets/helm-values.yml
@@ -372,7 +372,7 @@ webhook:
   tolerations:
     - effect: NoSchedule
       key: node
-      value: bastion
+      value: findforce
 
   topologySpreadConstraints: []
 
