fix: use topolog constraint instead

--- a/k8s/blueprints/external-secrets/helm-values.yml
+++ b/k8s/blueprints/external-secrets/helm-values.yml
@@ -374,17 +374,15 @@ webhook:
       key: node
       value: findforce
 
-  topologySpreadConstraints: []
+  topologySpreadConstraints:
+    - maxSkew: 1
+      topologyKey: kubernetes.io/hostname
+      whenUnsatisfiable: DoNotSchedule
+      labelSelector:
+        matchLabels:
+          app.kubernetes.io/name: external-secrets-webhook
 
-  affinity:
-    podAntiAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-        - labelSelector:
-            matchLabels:
-              app.kubernetes.io/name: external-secrets-webhook
-          topologyKey: kubernetes.io/hostname
-
-    # -- Pod priority class name.
+  affinity: {}
   priorityClassName: ""
 
   # -- Pod disruption budget - for more details see https://kubernetes.io/docs/concepts/workloads/pods/disruptions/
