--- a/k8s/prod-eu/helm-repositories/bitnami.yml
+++ b/k8s/prod-eu/helm-repositories/bitnami.yml
@@ -1,9 +1,10 @@
+---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: bitnami
   namespace: flux-system
 spec:
-  interval: 1h
-  provider: generic
-  url: https://charts.bitnami.com/bitnami
+  type: oci
+  interval: 5m0s
+  url: oci://registry-1.docker.io/bitnamicharts
