--- a/k8s/blueprints/cilium/helm-values.yml
+++ b/k8s/blueprints/cilium/helm-values.yml
@@ -2143,7 +2143,7 @@ loadBalancer:
   # program is run directly out of the networking driver's early receive
   # path), or best-effort (use native mode XDP acceleration on devices
   # that support it).
-  acceleration: native
+  acceleration: disabled
   # -- dsrDispatch configures whether IP option or IPIP encapsulation is
   # used to pass a service IP and port to remote backend
   # dsrDispatch: opt
