--- a/k8s/blueprints/cilium/helm-values.yml
+++ b/k8s/blueprints/cilium/helm-values.yml
@@ -94,14 +94,14 @@ k8sClientRateLimit:
     # @schema
     # -- (int) The sustained request rate in requests per second.
     # @default -- 100
-    qps:
+    qps: 10
     # @schema
     # type: [null, integer]
     # @schema
     # -- (int) The burst request rate in requests per second.
     # The rate limiter will allow short bursts with a higher rate.
     # @default -- 200
-    burst:
+    burst: 20
 cluster:
   # -- Name of the cluster. Only required for Cluster Mesh and mutual authentication with SPIRE.
   # It must respect the following constraints:
@@ -2000,7 +2000,7 @@ ipv6:
 k8s:
   # -- requireIPv4PodCIDR enables waiting for Kubernetes to provide the PodCIDR
   # range via the Kubernetes node resource
-  requireIPv4PodCIDR: false
+  requireIPv4PodCIDR: true
   # -- requireIPv6PodCIDR enables waiting for Kubernetes to provide the PodCIDR
   # range via the Kubernetes node resource
   requireIPv6PodCIDR: false
@@ -3602,7 +3602,7 @@ dnsProxy:
   # -- Allow the DNS proxy to compress responses to endpoints that are larger than 512 Bytes or the EDNS0 option, if present.
   enableDnsCompression: true
   # -- Maximum number of IPs to maintain per FQDN name for each endpoint.
-  endpointMaxIpPerHostname: 1000
+  endpointMaxIpPerHostname: 100
   # -- Time during which idle but previously active connections with expired DNS lookups are still considered alive.
   idleConnectionGracePeriod: 0s
   # -- Maximum number of IPs to retain for expired DNS lookups with still-active connections.
