fix: disable hostnetwork for gateway api

--- a/k8s/blueprints/cilium/helm-values.yml
+++ b/k8s/blueprints/cilium/helm-values.yml
@@ -979,7 +979,7 @@ gatewayAPI:
   # Host Network related configuration
   hostNetwork:
     # -- Configure whether the Envoy listeners should be exposed on the host network.
-    enabled: true
+    enabled: false
     # Specify the nodes where the Ingress listeners should be exposed
     nodes:
       # -- Specify the labels of the nodes where the Ingress listeners should be exposed
