--- a/k8s/blueprints/cilium/helm-values.yml
+++ b/k8s/blueprints/cilium/helm-values.yml
@@ -52,12 +52,13 @@ iptablesRandomFully: false
 # @default -- `"~/.kube/config"`
 kubeConfigPath: ""
 # -- (string) Kubernetes service host - use "auto" for automatic lookup from the cluster-info ConfigMap
-k8sServiceHost: 172.16.16.1
+# k8sServiceHost: 172.16.16.1
+k8sServiceHost: 128.140.71.149
 # @schema
 # type: [string, integer]
 # @schema
 # -- (string) Kubernetes service port
-k8sServicePort: 6443
+k8sServicePort: 10113
 # @schema
 # type: [null, string]
 # @schema
@@ -1927,7 +1928,7 @@ ipam:
     # type: [array, string]
     # @schema
     # -- IPv4 CIDR list range to delegate to individual nodes for IPAM.
-    clusterPoolIPv4PodCIDRList: ["10.42.0.0/16"]  # k3s default
+    clusterPoolIPv4PodCIDRList: ["10.42.0.0/16"] # k3s default
     # -- IPv4 CIDR mask size to delegate to individual nodes for IPAM.
     clusterPoolIPv4MaskSize: 24
     # @schema
@@ -2108,7 +2109,7 @@ vtep:
 # direct routing and the Kubernetes CIDR is included in the native routing CIDR,
 # the user must configure the routes to reach pods, either manually or by
 # setting the auto-direct-node-routes flag.
-ipv4NativeRoutingCIDR: "172.16.0.0/12"
+ipv4NativeRoutingCIDR: ""
 # -- (string) Allows to explicitly specify the IPv6 CIDR for native routing.
 # When specified, Cilium assumes networking for this CIDR is preconfigured and
 # hands traffic destined for that range to the Linux network stack without
