--- a/k8s/blueprints/echo-server/kustomization.yml
+++ b/k8s/blueprints/echo-server/kustomization.yml
@@ -1,7 +1,10 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 configMapGenerator:
-  - name: echo-server
-    envs:
+  - envs:
       - configs.env
+    name: echo-server
 
 resources:
   - service.yml
@@ -16,18 +19,20 @@ images:
 
 replacements:
   - source:
-      kind: Deployment
       fieldPath: spec.template.metadata.labels
+      kind: Deployment
     targets:
-      - select:
-          kind: CiliumNetworkPolicy
-        fieldPaths:
+      - fieldPaths:
           - spec.endpointSelector.matchLabels
         options:
           create: true
+        select:
+          kind: CiliumNetworkPolicy
 
-commonLabels:
-  app.kubernetes.io/instance: echo-server
-  app.kubernetes.io/managed-by: Kustomize
-  app.kubernetes.io/name: echo-server
-  app.kubernetes.io/version: 0.9.2
+labels:
+  - includeSelectors: true
+    pairs:
+      app.kubernetes.io/instance: echo-server
+      app.kubernetes.io/managed-by: Kustomize
+      app.kubernetes.io/name: echo-server
+      app.kubernetes.io/version: 0.9.2
