fix: upgrade cilium to v1.17.x, again

--- a/k8s/blueprints/cilium/helm-values.yml
+++ b/k8s/blueprints/cilium/helm-values.yml
@@ -223,8 +223,6 @@ nodeSelector:
 # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/
 tolerations:
   - operator: Exists
-  - effect: NoSchedule
-    key: node
     # - key: "key"
     #   operator: "Equal|Exists"
     #   value: "value"
@@ -603,7 +601,7 @@ bpf:
   # @schema
   # -- (bool) Enable native IP masquerade support in eBPF
   # @default -- `false`
-  masquerade: true
+  masquerade: ~
   # @schema
   # type: [null, boolean]
   # @schema
@@ -961,7 +959,7 @@ gatewayAPI:
   # -- Control how traffic from external sources is routed to the LoadBalancer Kubernetes Service for all Cilium GatewayAPI Gateway instances. Valid values are "Cluster" and "Local".
   # Note that this value will be ignored when `hostNetwork.enabled == true`.
   # ref: https://kubernetes.io/docs/reference/networking/virtual-ips/#external-traffic-policy
-  externalTrafficPolicy: Local
+  externalTrafficPolicy: Cluster
   gatewayClass:
     # -- Enable creation of GatewayClass resource
     # The default value is 'auto' which decides according to presence of gateway.networking.k8s.io/v1/GatewayClass in the cluster.
@@ -1039,7 +1037,7 @@ endpointRoutes:
   # @schema
   # -- Enable use of per endpoint routes instead of routing via
   # the cilium_host interface.
-  enabled: true
+  enabled: false
 k8sNetworkPolicy:
   # -- Enable support for K8s NetworkPolicy
   enabled: true
@@ -1915,7 +1913,7 @@ installNoConntrackIptablesRules: false
 ipam:
   # -- Configure IP Address Management mode.
   # ref: https://docs.cilium.io/en/stable/network/concepts/ipam/
-  mode: kubernetes
+  mode: "cluster-pool"
   # -- Maximum rate at which the CiliumNode custom resource is updated.
   ciliumNodeUpdateRate: "15s"
   # -- Pre-allocation settings for IPAM in Multi-Pool mode
@@ -2029,7 +2027,7 @@ readinessProbe:
 # -- Configure the kube-proxy replacement in Cilium BPF datapath
 # Valid options are "true" or "false".
 # ref: https://docs.cilium.io/en/stable/network/kubernetes/kubeproxy-free/
-kubeProxyReplacement: true
+kubeProxyReplacement: "true"
 
 # -- healthz server bind address for the kube-proxy replacement.
 # To enable set the value to '0.0.0.0:10256' for all ipv4
@@ -2673,14 +2671,14 @@ tls:
 #   - vxlan
 #   - geneve
 # @default -- `"vxlan"`
-tunnelProtocol: vxlan
+tunnelProtocol: ""
 # -- Enable native-routing mode or tunneling mode.
 # Possible values:
 #   - ""
 #   - native
 #   - tunnel
 # @default -- `"tunnel"`
-routingMode: tunnel
+routingMode: ""
 # -- Configure VXLAN and Geneve tunnel port.
 # @default -- Port 8472 for VXLAN, Port 6081 for Geneve
 tunnelPort: 0
@@ -2696,7 +2694,7 @@ serviceNoBackendResponse: reject
 # This value doesn't change the host network interface MTU i.e. eth0 or ens0.
 # It changes the MTU for cilium_net@cilium_host, cilium_host@cilium_net,
 # cilium_vxlan and lxc_health interfaces.
-MTU: 1450
+MTU: 0
 # -- Disable the usage of CiliumEndpoint CRD.
 disableEndpointCRD: false
 wellKnownIdentities:
@@ -2735,7 +2733,7 @@ operator:
     pullPolicy: "IfNotPresent"
     suffix: ""
   # -- Number of replicas to run for the cilium-operator deployment
-  replicas: 1
+  replicas: 2
   # -- The priority class to use for cilium-operator
   priorityClassName: ""
   # -- DNS policy for Cilium operator pods.
@@ -2775,8 +2773,6 @@ operator:
   # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/
   tolerations:
     - operator: Exists
-    - effect: NoSchedule
-      key: node
       # - key: "key"
       #   operator: "Equal|Exists"
       #   value: "value"
@@ -3602,7 +3598,7 @@ dnsProxy:
   # -- Allow the DNS proxy to compress responses to endpoints that are larger than 512 Bytes or the EDNS0 option, if present.
   enableDnsCompression: true
   # -- Maximum number of IPs to maintain per FQDN name for each endpoint.
-  endpointMaxIpPerHostname: 100
+  endpointMaxIpPerHostname: 1000
   # -- Time during which idle but previously active connections with expired DNS lookups are still considered alive.
   idleConnectionGracePeriod: 0s
   # -- Maximum number of IPs to retain for expired DNS lookups with still-active connections.
