fix: add host path local pvc to kratos

--- a/k8s/blueprints/kratos/deployment-merge.yml
+++ b/k8s/blueprints/kratos/deployment-merge.yml
@@ -110,3 +110,7 @@ spec:
             name: kratos-jsonnet
             optional: false
           name: kratos-jsonnet
+        - hostPath:
+            path: /var/lib/kratos
+            type: DirectoryOrCreate
+          name: kratos-data
