--- a/k8s/blueprints/n8n/pvc.yml
+++ b/k8s/blueprints/n8n/pvc.yml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: n8n
+  annotations:
+    kustomize.toolkit.fluxcd.io/prune: disabled
 spec:
   accessModes:
     - ReadWriteOnce
