fix: add labels to kratos

--- a/k8s/blueprints/kratos/kustomization.yml
+++ b/k8s/blueprints/kratos/kustomization.yml
@@ -25,4 +25,15 @@ images:
 patches:
   - path: deployment-merge.yml
 
+labels:
+  - includeSelectors: true
+    includeTemplates: true
+    pairs:
+      app.kubernetes.io/component: kratos
+      app.kubernetes.io/instance: kratos
+      app.kubernetes.io/managed-by: Kustomize
+      app.kubernetes.io/name: kratos
+      app.kubernetes.io/part-of: kratos
+      app.kubernetes.io/version: v1.0.0
+
 namespace: auth
