fix: use fat kratos image for sqlite support

--- a/k8s/blueprints/kratos/kustomization.yml
+++ b/k8s/blueprints/kratos/kustomization.yml
@@ -20,7 +20,7 @@ resources:
 
 images:
   - name: oryd/kratos
-    newTag: v1.3.1-distroless
+    newTag: v1.3.1
 
 patches:
   - path: deployment-merge.yml
