fix: change ownership of kratos db dir

--- a/k8s/blueprints/kratos/deployment-merge.yml
+++ b/k8s/blueprints/kratos/deployment-merge.yml
@@ -61,6 +61,17 @@ spec:
             - mountPath: /var/lib/kratos
               name: kratos-data
       initContainers:
+        - name: kratos-init-db-dir
+          image: busybox:1.35
+          command:
+            - sh
+            - -c
+            - |
+              mkdir -p /var/lib/kratos
+              chown -R 65534:65534 /var/lib/kratos
+          volumeMounts:
+            - mountPath: /var/lib/kratos
+              name: kratos-data
         - args:
             - migrate
             - sql
