--- a/applications/listmonk-exporter/Dockerfile
+++ b/applications/listmonk-exporter/Dockerfile
@@ -1,25 +1,15 @@
-FROM python:3.13-alpine AS deps
-
-WORKDIR /wheel
-
-COPY requirements.txt /
-
-RUN pip install -U pip && \
-    pip wheel -r /requirements.txt --no-cache-dir --wheel-dir /wheel
-
 FROM python:3.13-alpine AS app
 
 WORKDIR /app
 ENV PORT=8000
 EXPOSE ${PORT}
 
-COPY --from=deps /wheel /wheel
-RUN pip install /wheel/* && \
-    rm -rf /wheel && \
+RUN pip install -U pip && \
     addgroup -S appuser && \
     adduser -S appuser -G appuser
 
-COPY --chown=appuser:appuser main.py .
+COPY --chown=appuser:appuser . .
+RUN pip install -e . --no-cache-dir
 
 USER appuser:appuser
 
