--- a/ansible/roles/k3s-backup-blob-storage/meta/main.yml
+++ b/ansible/roles/k3s-backup-blob-storage/meta/main.yml
@@ -21,8 +21,7 @@ galaxy_info:
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
 
-  galaxy_tags:
-    []
+  galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
