--- a/k8s/blueprints/tracee/kustomization.yml
+++ b/k8s/blueprints/tracee/kustomization.yml
@@ -10,7 +10,7 @@ configMapGenerator:
     name: tracee-grafana-dashboard
     options:
       labels:
-        grafana_dashboard: '1'
+        grafana_dashboard: "1"
 
 resources:
   - vmpodscrape.yml
