feat: do not publish future posts

--- a/applications/listmonk-exporter/pyproject.toml
+++ b/applications/listmonk-exporter/pyproject.toml
@@ -11,6 +11,8 @@ requires-python = ">=3.13,<4"
 dependencies = [
   "httpx<4",
   "prometheus-client<1",
+  "pydantic-settings<3",
+  "pydantic<3",
 ]
 
 [project.scripts]
